--- a/themes/startwords/assets/scss/_variables.scss
+++ b/themes/startwords/assets/scss/_variables.scss
@@ -3,20 +3,20 @@
 // colors
 $off-white:    #F6F6F6;
 $light-grey:   #E9E9E9;
-$light-purple: #E0CEFF;
-$medium-purple: #C7A6FF;
-$medium-dark-purple: #AE80FF;
-$purple:       #4C2A85;
-$dark-purple:  #3D206C;
-$darkest-purple: #38235B;
+$light-purple: #abacc8;
+$medium-purple: #7d7e9c;
+$medium-dark-purple: #636b99;
+$purple:       #144087;
+$dark-purple:  #1b1948;
+$darkest-purple: #1b1948;
 $dark-grey:    #404040;
 $grey:         #808080;
 $black:        #000000;
-$red:          #CE2949;
+$red:          #df765d;
 
 // transparent colors
 $transparent-grey: rgba(128, 128, 128, 0.5);
-$transparent-red: rgba(206, 41, 73, 0.6);
+$transparent-red: rgba(223, 118, 93, 0.6);
 
 // font controls
 $font-sans:  'Source Sans Pro', 'Arial', sans-serif;
