--- a/themes/startwords/layouts/article/summary.html
+++ b/themes/startwords/layouts/article/summary.html
@@ -1,5 +1,6 @@
 <article class="article-summary">
-    {{ $summaryText := .Summary | plainify }}
+
+    {{ $summaryText := .Params.abstract | default .Summary | plainify  }}
     {{ $shaperHeight := .Params.hook_height_override | default (mul 1.45  ($summaryText | countrunes) | lang.FormatNumber 3) }}
     <div class="bg-text" role="presentation"><span class="shaper" style="height:{{ $shaperHeight }}px"></span>{{ $summaryText }}</div>
     <div class="bg-text secondary" role="presentation"><span class="shaper" style="height:{{ $shaperHeight }}px"></span>{{ $summaryText }}</div>
