--- a/themes/startwords/layouts/partials/header.html
+++ b/themes/startwords/layouts/partials/header.html
@@ -3,12 +3,24 @@
         <ul>
             <li class="home">
                 <a href="{{ relLangURL "/" }}">
-                    <img class="logo" src="/img/logos/startwords.svg" alt="{{ i18n "home" }}" width="15" height="33">
+                    {{ $.Site.Params.shortTitle | default .Site.Title }}
+<!--                    <img class="logo" src="/img/logos/startwords.svg" alt="{{ i18n "home" }}" width="15" height="33"> -->
                 </a>
             </li>
             <li class="issues">
-                <a href="{{ relLangURL "/issues/" }}">{{ i18n "issues" }}</a>
+                <a href="{{ relLangURL "/vol/" }}">volumes {{ i18n "volumes" }}</a>
             </li>
+            <!-- use nav from config; handle multiple -->
+            <!--
+            <li class="">
+                <a href="{{ relLangURL "/categoriess/" }}">keywords{{ i18n "keywords" }}</a>
+            </li>
+
+            <li class="">
+                <a href="{{ relLangURL "/tags/" }}">tags{{ i18n "tags" }}</a>
+            </li>
+        -->
+
         </ul>
     </nav>
     {{/*
