--- a/themes/startwords/layouts/partials/issue/features.html
+++ b/themes/startwords/layouts/partials/issue/features.html
@@ -4,7 +4,8 @@
 
         {{/* get articles for the current issue */}}
         {{ $pages := newScratch }}
-        {{ $currentArticles := .Pages.ByParam "order" }}
+        {{/* exclude introductions */}}
+        {{ $currentArticles := where (.Pages.ByParam "order") ".Params.dhqtype" "ne" "introduction"}}
         {{ $pages.Set "articles" $currentArticles }}
         {{/* if this issue is translated, get articles from main language issue to supplement any untranslated content */}}
         {{ if .IsTranslated }}
@@ -15,7 +16,7 @@
         {{/* order the merged set so mixed language articles will sort properly */}}
         {{ $articles := sort ($pages.Get "articles")  ".Params.order" }}
 
-        {{ $numFeatures := default 2 (int .Params.num_features) }}
+        {{ $numFeatures := default $.Site.Params.num_features (int .Params.num_features) }}
         {{ range first $numFeatures  $articles }}
             {{ .Render "summary" }}
         {{ end }}
@@ -23,7 +24,9 @@
         {{ $snippets := after $numFeatures $articles }}
         {{ if $snippets }}
         <div class="snippets">
+            {{ if ne $numFeatures 0 }}
             <h2>{{ i18n "snippets" }}</h2>
+            {{ end }}
             {{ range $snippets }}
             <div class="article-short-summary">
                 <a class="highlight-focus" href="{{ .RelPermalink }}">{{ .Title }}</a>
