--- a/themes/startwords/layouts/partials/author_lastnamefirst.html
+++ b/themes/startwords/layouts/partials/author_lastnamefirst.html
@@ -1,4 +1,5 @@
 {{ $lastname_first := "" }}
+{{ with . }}
 {{/* NOTE: build will fail if an author id doesn't match an author data record;
     could check if . is set, but then will silently fail */}}
     {{/* return sort name for an author; expects to be called with an author data file entry */}}
@@ -13,4 +14,5 @@
         {{/* combine last and then first name(s) */}}
         {{ $lastname_first = delimit ((last 1 $nameParts) | append (delimit $first_parts " "))     ", " }}
     {{ end }}
+{{ end }}
 {{ return $lastname_first }}
