--- a/themes/startwords/layouts/_default/summary.html
+++ b/themes/startwords/layouts/_default/summary.html
@@ -1,4 +1,5 @@
 <article>
+   <p>    **startwords default summary template **</p>
     <h1><a href="{{ .RelPermalink }}">{{ .Title }}</a></h1>
     {{ partial "pubdate" . }}
     {{ range .Params.tags }}
