--- a/themes/startwords/layouts/article/summary.html
+++ b/themes/startwords/layouts/article/summary.html
@@ -1,18 +1,12 @@
 <article class="article-summary">
-
-    {{ $summaryText := .Params.abstract | default .Summary | plainify  }}
-    {{ $shaperHeight := .Params.hook_height_override | default (mul 1.45  ($summaryText | countrunes) | lang.FormatNumber 3) }}
-    <div class="bg-text" role="presentation"><span class="shaper" style="height:{{ $shaperHeight }}px"></span>{{ $summaryText }}</div>
-    <div class="bg-text secondary" role="presentation"><span class="shaper" style="height:{{ $shaperHeight }}px"></span>{{ $summaryText }}</div>
-    {{/* output length + wordcount in case it is helpful to editors/devs adjusting height */}}
-    <!-- summary length: {{ $summaryText | len }}; rune count: {{ $summaryText | countrunes }}; word count: {{ $summaryText | countwords }}-->
-    {{/* use override param if set; otherwise calculate based on text length; length * 1.25; runecount * 1.4   */}}
-    <p><span class="shaper" style="height:{{ $shaperHeight }}px"></span>{{ $summaryText }}</p>
-    <h2><a class="highlight-focus" href="{{ .RelPermalink }}">{{ .Title }}</a></h2>
-    {{ partial "available_languages.html" . }}
+    <a class="highlight-focus" href="{{ .RelPermalink }}">{{ .Title }}</a>
     {{ partial "authors" . }}
+    {{ partial "tags" . }}
+    {{ with .Params.teaser }}
+    <p class="teaser">{{ . }}</p>
+    {{ end }}
+    {{ partial "available_languages.html" . }}
     {{ with .Params.doi }}
     <a class="doi highlight-focus" href="https://doi.org/{{ . }}">{{ . }}</a>
     {{ end }}
-
 </article>
