--- a/themes/startwords/layouts/partials/footer.html
+++ b/themes/startwords/layouts/partials/footer.html
@@ -11,7 +11,7 @@
 
     <div class="icons">
         <a class="license highlight-focus" rel="license" href="{{ .Site.Params.license }}">
-            <img alt="{{ .Site.Params.license_text }}" src="{{ relURL "/img/logos/license.svg" }}" width="120" height="42"/></a>
+            <img alt="{{ .Site.Params.license_text }}" src="{{ relURL "img/logos/license.svg" }}" width="120" height="42"/></a>
         {{/*
         <a class="highlight-focus" href="{{ relLangURL "/" }}" aria-label="{{ .Site.Title }}">
              <div class="logo" id="startwords"></div>
