Add some translations for i18n/l18n

--- a/layouts/issue/summary.html
+++ b/layouts/issue/summary.html
@@ -7,7 +7,7 @@
     {{ range $cluster := .Params.clusters }}
         <h2 class="theme">{{ $cluster.title }}</h2>
         {{ with $cluster.editors }}
-            <p>Edited by {{ . }}</p>
+            <p>{{ i18n "edited-by" }} {{ . }}</p>
         {{ end }}
     {{ end }}
 </article>
